--- a/index.html
+++ b/index.html
@@ -3,11 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Aremo Pipeloluwa" />
+    <meta name="description" content="Gather is a powerful website that provides users with a centralized platform to track and monitor website activity and data." />
+    <meta name="keywords" content="Gather, website activity, data tracking, monitoring, analytics" />
+    <meta name="robots" content="index, follow" />
+    <meta name="og:title" content="Pipe's Gather Website" />
+    <meta name="og:description" content="Gather is a powerful website that provides users with a centralized platform to track and monitor website activity and data." />
+    <meta name="og:image" content="gatherlogo.jpg" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="gatherlogo.jpg" type="image/x-icon" />
+
     <title>Pipe's Gather Website</title>
   </head>
   <body>
